sumo/tests/netconvert/errors/XML/broken_edge/edge#shape__false1c/errors.netconvert
Error: A non-numeric value occured in shape definition for edge '1'.
Quitting (on error).
